--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} Биткоинов будет внесено на счёт твоей банды, это действие нельзя будет отменить. Ты Уверен?",
+ 	 	 	 	 	"trans": "${amount} Биткоинов будут внесены на счёт твоей банды, это действие нельзя будет отменить. Ты Уверен?",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
@@ -49,7 +49,7 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Пожалуйста, введи девиз банды",
+ 	 	 	 	 	 	"trans": "Пожалуйста, введите девиз банды",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
@@ -354,7 +354,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"vpnName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "В действительности действует, что все отправленные сообщения будут изменены. Используйте ${vpnName}, чтобы закрепить соединение!",
+ 	 	 	 	 	"trans": "Чат эксплойт в действии, все отправленные сообщения будут изменены. Используйте ${vpnName} для защиты вашего соединения!",
  	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
  	 	 	 	},
  	 	 	 	"activateVPN": {
@@ -367,7 +367,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"name"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${name} собирается закончиться через несколько секунд!",
+ 	 	 	 	 	"trans": "${name} закончиться через несколько секунд!",
  	 	 	 	 	"eng": "${name} is about to run out in a few seconds!"
  	 	 	 	},
  	 	 	 	"refresh": {
@@ -445,7 +445,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "Увеличь свой уровень навыка печати, чтобы создавать более мощное оружие, печатая больше чертежей",
+ 	 	 	 	"trans": "Увеличь свой уровень печати, чтобы создавать более мощное оружие, печатая больше чертежей",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
@@ -1996,7 +1996,7 @@
  	 	 	 	 	"eng": "Nearby Enemies"
  	 	 	 	},
  	 	 	 	"desc": {
- 	 	 	 	 	"trans": "Поиск противников на улице, за пределами подземелий они слабее и их легче победить. Получаемый опыт тоже меньше",
+ 	 	 	 	 	"trans": "Поиск ближайших врагов на улице, враги вне подземелий слабее и их легче победить. Однако они также приносят меньше опыта.",
  	 	 	 	 	"eng": "Scans for nearby enemies on the street, enemies outside dungeons are weaker and easier to defeat. However they also drop less exp"
  	 	 	 	}
  	 	 	}
@@ -2152,7 +2152,7 @@
  	 	 	 	"eng": "equipment"
  	 	 	},
  	 	 	"enemyGangsAndMark": {
- 	 	 	 	"trans": "Вражеские банды и Значки на Экипировке",
+ 	 	 	 	"trans": "Вражеские банды и Маркировка Оборудования",
  	 	 	 	"eng": "Enemy Gangs and Equipment Marks"
  	 	 	},
  	 	 	"timeSkip": {
@@ -2228,7 +2228,7 @@
  	 	 	 	"eng": "Select Container"
  	 	 	},
  	 	 	"hint": {
- 	 	 	 	"trans": "Разблокируй контейнер, чтобы получить предметы внутри, требуется небольшое количество технических отходов",
+ 	 	 	 	"trans": "Разблокируй контейнер, чтобы получить предметы внутри, требуется небольшое количество металлолома",
  	 	 	 	"eng": "Unlock a container to get the items inside, requires small amount of tech scraps"
  	 	 	},
  	 	 	"increaseEpicDropRate": {
@@ -2240,7 +2240,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Получи до 2% (0.5% на легендарный контейнер) дополнительный шанс получить эпический чертёж при разблокировке заблокированного легендарного контейнера, активируя ${itemName}",
+ 	 	 	 	 	"trans": "Получи до 2% (0.5% на легендарный контейнер) дополнительного шанса выпадение эпического чертёжа при разблокировке заблокированного легендарного контейнера, активируя ${itemName}",
  	 	 	 	 	"eng": "Receive up to 2% (0.5% per Legendary Container) additional chance to get epic tier cache when unlocking Locked Legendary Container by activating ${itemName}"
  	 	 	 	}
  	 	 	},
@@ -2256,7 +2256,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${itemName} теперь активен, теперь разблокируй легендарный контейнер, чтобы иметь 0,5% дополнительных шансов на оборудование для эпического уровня на легендарный контейнер",
+ 	 	 	 	 	"trans": "${itemName} сейчас активен, разблокируйте Легендарный контейнер сейчас, чтобы получить 0,5% дополнительного шанса на снаряжение уровня EPIC за Легендарный контейнер",
  	 	 	 	 	"eng": "${itemName} is now active, unlock Legendary Container now to have 0.5% additional chance for EPIC tier equipment per Legendary Container"
  	 	 	 	}
  	 	 	},
@@ -2360,7 +2360,7 @@
  	 	 	"eng": "moderators"
  	 	},
  	 	"craft": {
- 	 	 	"trans": "cоздать",
+ 	 	 	"trans": "крафт",
  	 	 	"eng": "craft"
  	 	},
  	 	"purchase": {
@@ -2516,7 +2516,7 @@
  	 	 	 	"eng": "Crit chance"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Вероятность проведения критической атаки",
+ 	 	 	 	"trans": "Шанс того, что вы нанесете критическую атаку",
  	 	 	 	"eng": "Chance of you executing a critical attack"
  	 	 	}
  	 	},
@@ -4156,7 +4156,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"currencyName"
  	 	 	 	],
- 	 	 	 	"trans": "Транслирует коды взлома всем кибернетически связанным пользователям, временно улучшая их алгоритм транзакций, позволяя пользователю получать дополнительные  ${currencyName}.\r\n\r\n        При использовании дает глобальное ускорение всем игрокам онлайн, увеличивая количество получаемых биткойнов на 40% в течение 20 минут (эффект складывается)\r\n        ",
+ 	 	 	 	"trans": "Транслирует коды взлома всем кибернетически связанным пользователям, временно улучшая их алгоритм транзакций, позволяя пользователю получать бонус  ${currencyName}.\r\n\r\n        При использовании дает глобальное ускорение всем игрокам онлайн, увеличивая количество получаемых биткойнов на 40% в течение 20 минут (эффект складывается)\r\n        ",
  	 	 	 	"eng": "Broadcasts exploits to all cybernetically connected users, argument their transaction algorithm temporary, allowing user to receive bonus  ${currencyName}.\r\n\r\n        When used, gives Global Buff to all players online, increase BitCoin gained by 40% for 20 minutes (stackable)\r\n        "
  	 	 	}
  	 	},
@@ -4330,7 +4330,7 @@
  	 	 	 	"eng": "Explorer's Backpack"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Старый, похожий на детсадовский, фиолетовый рюкзак 'исследователя', на нем есть бирка с именем прошлого владельца \"Даша\", нося его, ты выглядишь поразительно.\r\n        увеличивает место в инвентаре когда надет",
+ 	 	 	 	"trans": "Старый, похожий на детсадовский, фиолетовый рюкзак 'исследователя', на нем есть бирка с именем прошлого владельца \"Dora\", нося его, ты выглядишь поразительно.\r\n        увеличивает место в инвентаре когда надет",
  	 	 	 	"eng": "An old Kindergarten looking Purple 'Explorer' Backpack, it has a name tag with the previous owner's name \"Dora\" written on it, you look fabulous wearing it.\r\n        increase inventory space when equipped"
  	 	 	}
  	 	},
@@ -4410,7 +4410,7 @@
  	 	 	 	"eng": "Personal Synaptic Accelerator"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "При использовании пропусти 60 минут на задачах AFK. \r\n         должен быть использован на экране AFK",
+ 	 	 	 	"trans": "При использовании пропускает 60 минут на AFK задачах. \r\n         должен быть использован на экране AFK",
  	 	 	 	"eng": "When used, skip 60 minutes on AFK tasks.\r\n        must be used at AFK screen"
  	 	 	}
  	 	},
@@ -4544,7 +4544,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "Чертеж ${typeName} содержит информацию, необходимую для молекулярной 3D печати данного предмета, \r\n                    Ты можешь создать ${typeName} с помощью [Молекулярного 3D Принтера] в Центре города.\r\n                    \r\n                    Совет: Уровень созданного тобой предмета определяется твоим Уровнем Печати,\r\n                    так что всегда печатай сначала плохие, поскольку стоят они меньше и полезны для увеличения твоего Уровня Печати",
+ 	 	 	 	"trans": "${typeName} чертеж содержит информацию, необходимую для молекулярной 3D печати данного предмета, \r\n                    Ты можешь создать ${typeName} с помощью [Молекулярного 3D Принтера] в Центре города.\r\n                    \r\n                    Совет: Уровень созданного тобой предмета определяется твоим Уровнем Печати,\r\n                    так что всегда печатай сначала плохие, поскольку стоят они меньше и полезны для увеличения твоего Уровня Печати",
  	 	 	 	"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
  	 	 	}
  	 	}
@@ -4613,7 +4613,7 @@
  	 	 	 	 	"eng": "Go to Shangri-La Commercial Area"
  	 	 	 	},
  	 	 	 	"tut": {
- 	 	 	 	 	"trans": "Здесь вы можете выполнять работу AFK, чтобы улучшить свои навыки",
+ 	 	 	 	 	"trans": "Здесь вы можете выполнять задания AFK, чтобы повысить свои навыки",
  	 	 	 	 	"eng": "You can complete AFK jobs to increase your skills here"
  	 	 	 	}
  	 	 	},
@@ -4694,7 +4694,7 @@
  	 	 	"backToMainHub": {
  	 	 	 	"name": {
  	 	 	 	 	"trans": "Вернуться в центр города",
- 	 	 	 	 	"eng": "Back to city center"
+ 	 	 	 	 	"eng": "\ city center"
  	 	 	 	},
  	 	 	 	"description": {
  	 	 	 	 	"vars": [
@@ -4709,7 +4709,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"segmentStationName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "обратно на ${segmentStationName}",
+ 	 	 	 	 	"trans": "назад к ${segmentStationName}",
  	 	 	 	 	"eng": "back to ${segmentStationName}"
  	 	 	 	},
  	 	 	 	"description": {
@@ -4722,7 +4722,7 @@
  	 	 	},
  	 	 	"toStation": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "обратно на станцию гиперпоездов",
+ 	 	 	 	 	"trans": "назад на станцию гиперпоездов",
  	 	 	 	 	"eng": "back to Hyper Train Station"
  	 	 	 	},
  	 	 	 	"description": {
@@ -4749,7 +4749,7 @@
  	 	 	},
  	 	 	"locked": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Собери все 3 фрагмента ключа из подземелий в каждой из 3 локаций на предыдущей станции, \r\n                    а после посети [Терминал] в Центре города, чтобы подобрать (создать) нужный ключ, необходимый для разблокировки этой локации",
+ 	 	 	 	 	"trans": "Соберите все 3 фрагмента ключей из подземелий в каждой из 3 зон на предыдущей станции, \r\n                    а после посети [Терминал] в Центре города, чтобы подобрать (создать) нужный ключ, необходимый для разблокировки этой локации",
  	 	 	 	 	"eng": "Gather all 3 different Key Fragments from Dungeons in each 3 zones in previous station, \r\n                    then go to [Terminal] at City Center [Hub] to brute-force (Craft) the key required to unlock this area"
  	 	 	 	}
  	 	 	},
@@ -4873,7 +4873,7 @@
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Чтобы перейти к следующей области, тебе нужно получить фрагменты секретного ключа из подземелий \r\n        и запустить Терминал, чтобы взломать ключ к следующей локации",
+ 	 	 	 	"trans": "Чтобы перейти к следующей области, тебе нужно получить фрагменты секретного ключа из подземелий \r\n        и использовать Терминал для получение ключа следующей области",
  	 	 	 	"eng": "To progress to the next area, you need to get Secret Key Fragments from dungeons, \r\n        and use the Terminal to Brute Force the key for next area"
  	 	 	},
  	 	 	"canAccessError": {
@@ -5440,7 +5440,7 @@
  	 	 	"eng": "Chat Exploit [1337]"
  	 	},
  	 	"UwU": {
- 	 	 	"trans": "Эксплойт для чата [UWU]",
+ 	 	 	"trans": "Эксплойт для чата [UwU]",
  	 	 	"eng": "Chat Exploit [UwU]"
  	 	},
  	 	"love": {
@@ -5452,7 +5452,7 @@
  	 	 	"eng": "Chat Encryption"
  	 	},
  	 	"rngInterferer": {
- 	 	 	"trans": "ГСЧ Помехи",
+ 	 	 	"trans": "RNG Помехи",
  	 	 	"eng": "RNG Interference"
  	 	},
  	 	"flashGrenade": {
@@ -5633,7 +5633,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"remaining"
  	 	 	 	],
- 	 	 	 	"trans": "Используя этот элемент, будет обновлен таймер текущего активного баффа и сложит эффект, если это возможно. (${remaining})",
+ 	 	 	 	"trans": "Используя этот элемент, будет обновлен таймер текущего активного баффа и эффект сложится, если это возможно. (${remaining})",
  	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
  	 	 	},
  	 	 	"confirmText": {
@@ -5718,15 +5718,15 @@
  	 	 	"eng": "with pockets"
  	 	},
  	 	"criticalChanceArmor": {
- 	 	 	"trans": "Шанса Критического Удара",
+ 	 	 	"trans": "Критического шанса",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"criticalChanceWeapon": {
- 	 	 	"trans": "Шанса Критического Удара",
+ 	 	 	"trans": "Критического шанса",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"criticalDamageArmor": {
- 	 	 	"trans": "Критического Урона",
+ 	 	 	"trans": "Жестокости",
  	 	 	"eng": "of Brutality"
  	 	},
  	 	"healingMultiplier": {
@@ -5762,7 +5762,7 @@
  	 	 	"eng": "of Stun"
  	 	},
  	 	"upgradeCriticalChance": {
- 	 	 	"trans": "Шанса Критического Удара",
+ 	 	 	"trans": "Критического Шанса",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"upgradeCriticalDamage": {
@@ -5770,7 +5770,7 @@
  	 	 	"eng": "of Crit Damage"
  	 	},
  	 	"upgradeEvade": {
- 	 	 	"trans": "Уклоняться от",
+ 	 	 	"trans": "Уклонение",
  	 	 	"eng": "of Evade"
  	 	},
  	 	"upgradePocketed": {
@@ -6411,7 +6411,7 @@
  	 	 	"eng": "scrap"
  	 	},
  	 	"destroy": {
- 	 	 	"trans": "разрушить",
+ 	 	 	"trans": "уничтожить",
  	 	 	"eng": "destroy"
  	 	}
  	},
@@ -6497,7 +6497,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Сократите время, необходимое для действия на 40%, складываемое до 80%",
+ 	 	 	 	"trans": "Сокращение времени, необходимого для выполнения задания, на 40%, вплоть до 80%",
  	 	 	 	"eng": "Reduce time needed for action by 40%, stackable upto 80%"
  	 	 	},
  	 	 	"activate": {
@@ -6507,25 +6507,25 @@
  	 	},
  	 	"extendButton": {
  	 	 	"activatedTitle": {
- 	 	 	 	"trans": "Награда повышение (активировано)",
+ 	 	 	 	"trans": "Повышение награды (активировано)",
  	 	 	 	"eng": "Reward Boost (Activated)"
  	 	 	},
  	 	 	"notActivatedTitle": {
- 	 	 	 	"trans": "Награда повышение",
+ 	 	 	 	"trans": "Повышение награды",
  	 	 	 	"eng": "Reward Boost"
  	 	 	},
  	 	 	"activatedDescription": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Увеличьте активированные, вы должны отметить флажок ниже, чтобы включить его для этой задачи",
+ 	 	 	 	"trans": "Boost активирован, вы должны установить флажок ниже, чтобы включить его для этой задачи",
  	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
  	 	 	},
  	 	 	"notActivatedDescription": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Удваните предметы и экспресс! в то время как продолжительность и стоимость увеличатся в 4 раза",
+ 	 	 	 	"trans": "Удвойте количество предметов и опыта, в то время как продолжительность и стоимость увеличится в 4 раза",
  	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
  	 	 	},
  	 	 	"activate": {
@@ -6539,7 +6539,7 @@
  	 	},
  	 	"startButton": {
  	 	 	"title": {
- 	 	 	 	"trans": "Начало",
+ 	 	 	 	"trans": "Начать",
  	 	 	 	"eng": "start"
  	 	 	}
  	 	}
