fixed spacing issue

--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -6681,8 +6681,8 @@
  	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "Questo titolo non scadrà mai, \\n rimarrà per sempre nel tuo account.",
- 	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
+ 	 	 	"trans": "Questo titolo non scadrà mai, \n rimarrà per sempre nel tuo account.",
+ 	 	 	"eng": "This title will never expire.\n It stays with your account forever."
  	 	}
  	},
  	"cosmetic": {
