--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -3544,7 +3544,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "プロフィール画面にバーコードを付与,
+ 	 	 	 	 	"trans": "プロフィール画面にバーコードを付与",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
