--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -646,7 +646,7 @@
  	 	 	 	 	"eng": "Malfunctioned"
  	 	 	 	},
  	 	 	 	"instruction": {
- 	 	 	 	 	"trans": "這個物品被破壞了，將它帶到裝備商人那兒進行維修",
+ 	 	 	 	 	"trans": "這個物品已損壞，將它帶到裝備商人那兒進行維修",
  	 	 	 	 	"eng": "This item is broken, bring it to Weapon Smith for repair"
  	 	 	 	}
  	 	 	},
@@ -1038,7 +1038,7 @@
  	 	 	},
  	 	 	"tierSelection": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "稀有性",
+ 	 	 	 	 	"trans": "稀有度",
  	 	 	 	 	"eng": "Rarity"
  	 	 	 	}
  	 	 	},
@@ -1276,7 +1276,7 @@
  	 	},
  	 	"tipsBox": {
  	 	 	"title": {
- 	 	 	 	"trans": "高手提示",
+ 	 	 	 	"trans": "專業提示",
  	 	 	 	"eng": "Pro Tips"
  	 	 	},
  	 	 	"description": {
