--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -553,7 +553,7 @@
  	 	 	},
  	 	 	"inProgressBox": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Глобальный пропуск в процессе",
+ 	 	 	 	 	"trans": "Активирован глобальный пропуск",
  	 	 	 	 	"eng": "Global Skip in progress"
  	 	 	 	},
  	 	 	 	"subtitle": {
@@ -565,7 +565,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Глобальный пропуск позволяет уменьшить время ожидания AFK и мгновенно завершить его.\r\n     этот эффект будет применен ко всем игрокам, выполняющим AFK задачу",
+ 	 	 	 	"trans": "Глобальный пропуск позволяет уменьшить время ожидания AFK и мгновенно завершить его.\r\n     Этот эффект будет применен ко всем игрокам, выполняющим AFK задачу",
  	 	 	 	"eng": "Global Skip allow you to skip the AFK waiting time, and finish it instantly.\r\n    this effect will be applied to all players performing an AFK task"
  	 	 	}
  	 	},
@@ -1128,7 +1128,7 @@
  	 	"quest": {
  	 	 	"dynamicTutorial": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Учебники",
+ 	 	 	 	 	"trans": "Обучающие задания",
  	 	 	 	 	"eng": "Tutorials"
  	 	 	 	},
  	 	 	 	"printingTooLow": {
@@ -2126,7 +2126,7 @@
  	 	},
  	 	"statsPage": {
  	 	 	"quitGang": {
- 	 	 	 	"trans": "Выйти из банда",
+ 	 	 	 	"trans": "Выйти из банды",
  	 	 	 	"eng": "Quit Gang"
  	 	 	},
  	 	 	"logout": {
@@ -2140,7 +2140,7 @@
  	 	 	 	"eng": "rules"
  	 	 	},
  	 	 	"faq": {
- 	 	 	 	"trans": "вопросы-ответы",
+ 	 	 	 	"trans": "Часто задаваемые вопросы",
  	 	 	 	"eng": "faq"
  	 	 	},
  	 	 	"referral": {
@@ -5133,11 +5133,10 @@
  	 	 	 	"eng": "Deploy farm bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[AFK Фарм опыта]\r\n        Отправь ИИ в подземелье за тебя. Это израсходует Ядро ИИ, обычно одно ядро справляется только с одной зачисткой подземелья.",
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Используй своё Ядро ИИ для автоматического фарма врагов, пока ты АФК",
+ 	 	 	 	"trans": "Используй Ядра ИИ для авто-фарма врагов, пока ты АФК",
  	 	 	 	"eng": "You can use your AI Core to Auto-Farm enemies while you AFK"
  	 	 	}
  	 	},
@@ -5374,7 +5373,7 @@
  	},
  	"reportPlayerType": {
  	 	"inappropriateLang": {
- 	 	 	"trans": "Неуместный язык",
+ 	 	 	"trans": "Неуместное высказывание",
  	 	 	"eng": "Inappropriate Language"
  	 	},
  	 	"aggressiveBehavior": {
@@ -6347,7 +6346,7 @@
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Жалоба будет отправлена модераторам автоматически. \\nПожалуйста, не злоупотребляйте спамингом и не играйте с системой отчетов",
+ 	 	 	"trans": "Жалоба будет отправлена модераторам автоматически. \\nПожалуйста, не делайте репорты по ошибке, не спамьте и не играйте с системой репортов",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
@@ -6507,25 +6506,24 @@
  	 	},
  	 	"extendButton": {
  	 	 	"activatedTitle": {
- 	 	 	 	"trans": "Повышение награды (активировано)",
  	 	 	 	"eng": "Reward Boost (Activated)"
  	 	 	},
  	 	 	"notActivatedTitle": {
- 	 	 	 	"trans": "Повышение награды",
+ 	 	 	 	"trans": "Увеличте награды",
  	 	 	 	"eng": "Reward Boost"
  	 	 	},
  	 	 	"activatedDescription": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Boost активирован, вы должны установить флажок ниже, чтобы включить его для этой задачи",
+ 	 	 	 	"trans": "Чтобы увеличить награду от AFK, поставьте галочку в поле ниже",
  	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
  	 	 	},
  	 	 	"notActivatedDescription": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Удвойте количество предметов и опыта, в то время как продолжительность и стоимость увеличится в 4 раза",
+ 	 	 	 	"trans": "Удвойте награды и получаемый опыт, но это так же увеличит продолжительность AFK и стоимость в 4 раза",
  	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
  	 	 	},
  	 	 	"activate": {
