Mini update ru.json
Correcting several words in a translation

--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -5133,6 +5133,7 @@
  	 	 	 	"eng": "Deploy farm bot"
  	 	 	},
  	 	 	"description": {
+ 	 	 		"trans": "[AFK Фарм опыта]\r\n        Отправь ИИ в подземелье за тебя. Это израсходует Ядро ИИ, обычно одно ядро справляется только с одной зачисткой подземелья.",
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
@@ -6506,6 +6507,7 @@
  	 	},
  	 	"extendButton": {
  	 	 	"activatedTitle": {
+ 	 	 		"trans": "Повышение награды (активировано)",
  	 	 	 	"eng": "Reward Boost (Activated)"
  	 	 	},
  	 	 	"notActivatedTitle": {
