minor change in level up phrase

--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -6327,7 +6327,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "Congratulazioni, ${levelName} è aumentato/a!",
+ 	 	 	 	"trans": "Congratulazioni, sei aumentato di ${levelName}",
  	 	 	 	"eng": "Congratulations, you have leveled up your ${levelName}!"
  	 	 	},
  	 	 	"fromTo": {
