--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -860,7 +860,7 @@
  	 	 	 	"eng": "location"
  	 	 	},
  	 	 	"onlineStatus": {
- 	 	 	 	"trans": "Status",
+ 	 	 	 	"trans": "Systemverbindung",
  	 	 	 	"eng": "system link"
  	 	 	},
  	 	 	"streetCred": {
@@ -1032,7 +1032,7 @@
  	 	 	},
  	 	 	"levelSelect": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Lebel",
+ 	 	 	 	 	"trans": "Level",
  	 	 	 	 	"eng": "Level"
  	 	 	 	}
  	 	 	},
@@ -1514,14 +1514,14 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Zuweisen Sie ${playerName} eine Bandenrang",
+ 	 	 	 	 	"trans": Weisen Sie ${playerName} einen Bandenrang zu",
  	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
  	 	 	 	},
  	 	 	 	"description": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Das Zuweisen eines Bandenrangs kostet ${cost} BTC und erfordert Spielen Neustart, um die Änderung zu sehen",
+ 	 	 	 	 	"trans": "Das Zuweisen eines Bandenrangs kostet ${cost} BTC und erfordert einen Neustart des Spieles, um die Änderung sehen zu können",
  	 	 	 	 	"eng": "Assigning a gang rank will cost you ${cost} btc and require game restart to see the change"
  	 	 	 	},
  	 	 	 	"input": {
@@ -1814,7 +1814,7 @@
  	 	},
  	 	"dailyReward": {
  	 	 	"nextLoginWindow": {
- 	 	 	 	"trans": "Nächste Anmeldezeitraum",
+ 	 	 	 	"trans": "Nächster Anmeldezeitraum",
  	 	 	 	"eng": "Next Login Period"
  	 	 	},
  	 	 	"day": {
@@ -2320,7 +2320,7 @@
  	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
- 	 	 	"trans": "Kooperationskapazität",
+ 	 	 	"trans": "Kalibrierungskapazität",
  	 	 	"eng": "Calibration Capacity"
  	 	},
  	 	"globalEffects": {
@@ -3512,7 +3512,7 @@
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "Passe das Gangfoto ann",
+ 	 	 	 	 	"trans": "Passe das Gangfoto an",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3528,7 +3528,7 @@
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Entsperren Sie die Anpassung der Profil Bild",
+ 	 	 	 	 	"trans": "Entsperren Sie die Profilbildpersonalisierung",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3556,7 +3556,7 @@
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "Mehr in zukünftiges Update kommen",
+ 	 	 	 	 	"trans": "Weiteres in zukünftigen Updates enthalten",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3568,7 +3568,7 @@
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Entsperren Sie die Anpassung der Profil Bild",
+ 	 	 	 	 	"trans": "Entsperren Sie die Profilbildpersonalisierung",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3596,7 +3596,7 @@
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "Mehr in zukünftiges Update kommen",
+ 	 	 	 	 	"trans": "Weiteres in zukünftigen Updates enthalten",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3608,7 +3608,7 @@
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Entsperren Sie die Anpassung der Profil Bild",
+ 	 	 	 	 	"trans": "Entsperren Sie die Profilbildpersonalisierung",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3636,7 +3636,7 @@
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "Mehr in zukünftiges Update kommen",
+ 	 	 	 	 	"trans": "Weiteres in zukünftigen Updates enthalten",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3648,7 +3648,7 @@
  	 	 	 	 	"eng": "\"CyberKitty\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "Entsperren Sie die Anpassung der Profil Bild",
+ 	 	 	 	 	"trans": "Entsperren Sie die Profilbildpersonalisierung",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3676,7 +3676,7 @@
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "Mehr in zukünftiges Update kommen",
+ 	 	 	 	 	"trans": "Weiteres in zukünftigen Updates enthalten",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -6203,25 +6203,25 @@
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
- 	 	 	 	"Love you",
- 	 	 	 	"You guys are great",
- 	 	 	 	"You guys are the best",
- 	 	 	 	"love yall",
- 	 	 	 	"You are amazing",
- 	 	 	 	"we are best friend",
- 	 	 	 	"Love you all",
- 	 	 	 	"you are great",
- 	 	 	 	"you the best",
- 	 	 	 	"we are awesome",
- 	 	 	 	"you are awesome",
- 	 	 	 	"have a nice day",
- 	 	 	 	"miss you",
- 	 	 	 	"miss you guys",
+ 	 	 	 	"Liebe dich",
+ 	 	 	 	"Ihr seid super",
+ 	 	 	 	"Ihr seid die Besten",
+ 	 	 	        "Lieb euch alle",
+ 	 	 	 	"Du bist unglaublich",
+ 	 	 	 	"Wir sind beste Freunde",
+ 	 	 	 	"Liebe euch alle",
+ 	 	 	 	"Du bist super",
+ 	 	 	 	"Du bist der Beste",
+ 	 	 	 	"Wir sind unglaublich",
+ 	 	 	 	"Du bist unglaublich",
+ 	 	 	 	"Hab einen schönen Tag",
+ 	 	 	 	"Vermisse dich",
+ 	 	 	 	"Vermisse euch",
  	 	 	 	"KYAAAAAAAAA",
- 	 	 	 	"wish you have nice day",
- 	 	 	 	"I love you",
- 	 	 	 	"can we hug?",
- 	 	 	 	"how much you love me?"
+ 	 	 	 	"Wünsche dir einen schönen Tag",
+ 	 	 	 	"Ich liebe dich",
+ 	 	 	 	"Können wir uns umarmen?",
+ 	 	 	 	"Wie sehr liebst du mich?"
  	 	 	],
  	 	 	"eng": [
  	 	 	 	"Love you",
