--- a/contribution/lang/en.json
+++ b/contribution/lang/en.json
@@ -354,7 +354,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"vpnName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!",
+ 	 	 	 	 	"trans": "Chat exploit is in effect, all messages sent will be altered. use ${vpnName} to secure your connection!",
  	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
  	 	 	 	},
  	 	 	 	"activateVPN": {
@@ -1147,7 +1147,7 @@
  	 	 	 	 	 	"eng": "Get even better equipments!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Your current equipment seems abit outdated for your level, try printing some stronger gear",
+ 	 	 	 	 	 	"trans": "Your current equipment seems a bit outdated for your level, try printing some stronger gear",
  	 	 	 	 	 	"eng": "Your current equipment seems abit outdated for your level, try printing stronger ones to replace them"
  	 	 	 	 	}
  	 	 	 	},
@@ -1456,7 +1456,7 @@
  	 	 	 	 	"eng": "Cancel Afk and logout?"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded.",
+ 	 	 	 	 	"trans": "Are you sure you want to cancel your afk and logout? the resources used to start the task will NOT be refunded.",
  	 	 	 	 	"eng": "Are you sure you want to cancel your afk and logout? the resource used to start the task will NOT be refunded."
  	 	 	 	}
  	 	 	}
@@ -1643,7 +1643,7 @@
  	 	 	 	"trans": "Maybe buy some healing items first?",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Seems like you dont have any Pain Away with you. Purchase it from Trinoky Mart in the city first before entering dungeons since you will not regen after battles in dungeon",
+ 	 	 	 	 	"trans": "Seems like you don't have any Pain Away with you. Purchase it from Trinoky Mart in the city first before entering dungeons as you will not regen after battles in dungeon",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
@@ -1927,7 +1927,7 @@
  	 	 	 	 	"eng": "equipment not found"
  	 	 	 	},
  	 	 	 	"subTitle": {
- 	 	 	 	 	"trans": "Select an equipment to continue",
+ 	 	 	 	 	"trans": "Select equipment to continue",
  	 	 	 	 	"eng": "Select an equipment to continue"
  	 	 	 	}
  	 	 	},
@@ -1954,7 +1954,7 @@
  	 	 	 	"eng": "please register or login with existing account"
  	 	 	},
  	 	 	"asusDescription": {
- 	 	 	 	"trans": "ASUS phone (Zenfone, ROG) has a bug with screen the screen not being clickable, if this is the case, please try turning your screen off and on again, or put this app to background and resume it again. This should fix the issue :)",
+ 	 	 	 	"trans": "ASUS phones (Zenfone, ROG) have a bug with the screen not being clickable, if this is the case, please try turning your screen off and on again, or put this app to background and resume it again. This should fix the issue :)",
  	 	 	 	"eng": "ASUS phone (Zenfone, ROG) has bug with screen being not clickable, in the case, please try turning your screen off and on again, or put this app to background and resume it again. this should fix the issue :)"
  	 	 	}
  	 	},
@@ -2066,7 +2066,7 @@
  	 	 	 	"eng": "You must be idle to do this action"
  	 	 	},
  	 	 	"noItem": {
- 	 	 	 	"trans": " You current don't have any item on sale",
+ 	 	 	 	"trans": " You currently don't have any items on sale",
  	 	 	 	"eng": " You current don't have any item on sale"
  	 	 	}
  	 	},
@@ -2228,7 +2228,7 @@
  	 	 	 	"eng": "Select Container"
  	 	 	},
  	 	 	"hint": {
- 	 	 	 	"trans": "Unlock a container to get the items inside, requires small amount of tech scraps",
+ 	 	 	 	"trans": "Unlock a container to get the items inside, requires small amount of tech scrap",
  	 	 	 	"eng": "Unlock a container to get the items inside, requires small amount of tech scraps"
  	 	 	},
  	 	 	"increaseEpicDropRate": {
@@ -4798,7 +4798,7 @@
  	 	 	 	 	"Have you visited Doc at Trinoky Mart? You don't look too well.",
  	 	 	 	 	"Most folks around here are nice. I stress most.",
  	 	 	 	 	"Been anywhere interesting lately? I just got back from Neo-Japan.",
- 	 	 	 	 	"There's nothing like a hot cup of tea on a cold day, won't you agree?",
+ 	 	 	 	 	"There's nothing like a hot cup of tea on a cold day, wouldn't you agree?",
  	 	 	 	 	"We got more S.A.T.'s on the way. Want to take a look in the mean time?",
  	 	 	 	 	"Global S.A.T.'s signals tend to go up at random. Be sure to pay attention.",
  	 	 	 	 	"My radio jammed up pretty bad the other day. Turns out it was the 3Helix Network.",
@@ -5336,7 +5336,7 @@
  	 	 	 	"eng": "Hack SL Data Fortress"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Launch a collaborated attack in cyberspace targeting the Shangri-La Data Fortress\r\n        If attack is to succeed, it's possible to force the Data Fortress to transmit exploits to all cybernetically connected users",
+ 	 	 	 	"trans": "Launch a collaborated attack in cyberspace targeting the Shangri-La Data Fortress\r\n        If the attack succeeds, it's possible to force the Data Fortress to transmit exploits to all cybernetically connected users",
  	 	 	 	"eng": "Launch a collaborative attack in cyberspace targeting the Shangri-La Data Fortress.\r\nIf the attack succeeds, it’s possible to force the Data Fortress to transmit exploits to all cybernetically connected users."
  	 	 	}
  	 	},
