--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -358,7 +358,7 @@
  	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
  	 	 	 	},
  	 	 	 	"activateVPN": {
- 	 	 	 	 	"trans": "激活VPN",
+ 	 	 	 	 	"trans": "啟動VPN",
  	 	 	 	 	"eng": "Activate VPN"
  	 	 	 	}
  	 	 	},
@@ -3644,39 +3644,39 @@
  	 	"donation11": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "“賽博喵喵”捐贈標題",
+ 	 	 	 	 	"trans": "“賽博喵喵”贊助頭銜",
  	 	 	 	 	"eng": "\"CyberKitty\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "解鎖個人資料圖片自定義",
+ 	 	 	 	 	"trans": "解鎖自訂個人檔案圖片",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "喵喵聊天框架（帶有動畫）",
+ 	 	 	 	 	"trans": "喵喵聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Kitty chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "喵喵構架個人資料（帶有動畫）",
+ 	 	 	 	 	"trans": "喵喵個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Kitty Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "解鎖自定義生物",
+ 	 	 	 	 	"trans": "解鎖自訂個人簡歷",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "輪廓上的條形碼裝飾",
+ 	 	 	 	 	"trans": "配置個人檔案的條碼裝飾",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制幫派座右銘",
+ 	 	 	 	 	"trans": "自訂公會座右銘",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定義幫派圖像",
+ 	 	 	 	 	"trans": "自訂公會圖片",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "將來更新會有更多",
+ 	 	 	 	 	"trans": "未來會有更多的更新",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -5711,7 +5711,7 @@
  	},
  	"chatServer": {
  	 	"restarting": {
- 	 	 	"trans": "聊天服務器正在重新啟動更新...",
+ 	 	 	"trans": "聊天伺服器正在更新...",
  	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
@@ -5837,7 +5837,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"remaining"
  	 	 	 	],
- 	 	 	 	"trans": "使用此物品，將刷新目前啟動中的加持時間，並在適用的情況下堆疊效果。 （${remaining}）",
+ 	 	 	 	"trans": "使用此物品將重置目前啟動中的增益時間，並在適用的情況下堆疊效果。 （${remaining}）",
  	 	 	 	"eng": "By using this item will refresh the timer of current active buff and stack the effect if applicable. (${remaining})"
  	 	 	},
  	 	 	"confirmText": {
@@ -6197,7 +6197,7 @@
  	 	 	 	"eng": "You will be MUTED if you breach any of the rules"
  	 	 	},
  	 	 	"footer2": {
- 	 	 	 	"trans": "可以在配置文件 > 教學 > 規則中找到完整的規則列表",
+ 	 	 	 	"trans": "可以在個人檔案 > 教學 > 規則中找到完整的規則列表",
  	 	 	 	"eng": "Full list of rules can be found in Profile > Tutorials > Rules"
  	 	 	},
  	 	 	"agreeToggle": {
@@ -6227,7 +6227,7 @@
  	 	 	 	"eng": "Player contributed content"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "你可以透過GitHub編輯或貢獻許多像這種文件",
+ 	 	 	 	"trans": "你可以透過GitHub編輯或貢獻許多這類的文件",
  	 	 	 	"eng": "You can contribute to content like this and many more too by editing the config files in our GitHub page."
  	 	 	},
  	 	 	"confirm": {
@@ -6551,7 +6551,7 @@
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "檢舉將自動發送給聊天管理員。 \\n 請不要濫用，亂刷或亂使用檢舉系統",
+ 	 	 	"trans": "檢舉將自動發送給聊天管理員，請不要濫用檢舉系統",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
@@ -6595,7 +6595,7 @@
  	 	 	 	"trans": "踢除",
  	 	 	 	"eng": "Kick",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "從公會踢其他玩家。",
+ 	 	 	 	 	"trans": "將玩家從公會中踢出。",
  	 	 	 	 	"eng": "Kick other players from your gang."
  	 	 	 	}
  	 	 	},
@@ -6603,7 +6603,7 @@
  	 	 	 	"trans": "管理",
  	 	 	 	"eng": "Manage",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "給予該玩家管理其他玩家的權限",
+ 	 	 	 	 	"trans": "給予該玩家管理公會成員的權限",
  	 	 	 	 	"eng": "Allow this player to manage permission of other players"
  	 	 	 	}
  	 	 	}
@@ -6673,7 +6673,7 @@
  	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "這個頭銜永遠不會過期。\n 它將永遠留在您的帳戶當中。",
+ 	 	 	"trans": "這個頭銜永遠不會過期。它將永遠留在您的帳戶當中。",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
@@ -6694,7 +6694,7 @@
  	 	 	 	 	"currentPercent",
  	 	 	 	 	""
  	 	 	 	],
- 	 	 	 	"trans": "減少時間（當前${currentPercent}％）",
+ 	 	 	 	"trans": "減少時間（目前${currentPercent}％）",
  	 	 	 	"eng": "Time Reduction (currently ${currentPercent}%)"
  	 	 	},
  	 	 	"description": {
@@ -6711,7 +6711,7 @@
  	 	},
  	 	"extendButton": {
  	 	 	"activatedTitle": {
- 	 	 	 	"trans": "獎勵提升（激活）",
+ 	 	 	 	"trans": "獎勵提升（啟動）",
  	 	 	 	"eng": "Reward Boost (Activated)"
  	 	 	},
  	 	 	"notActivatedTitle": {
@@ -6729,7 +6729,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "將物品和經驗加倍！ 而持續時間和成本將增加4次",
+ 	 	 	 	"trans": "將物品和經驗加倍！ 而花費時間和成本將變為4倍",
  	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
  	 	 	},
  	 	 	"activate": {
