fix syntax error

--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -1514,7 +1514,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"playerName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": Weisen Sie ${playerName} einen Bandenrang zu",
+ 	 	 	 	 	"trans": "Weisen Sie ${playerName} einen Bandenrang zu",
  	 	 	 	 	"eng": "Assign Gang Rank to ${playerName}"
  	 	 	 	},
  	 	 	 	"description": {
